26-Kubernetes/labs/07-last/03-application-bundles/02-helm/guestbook-letsencrypt-production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
  name: guestbook
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: plain.guestbook.rael.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: guestbook-np
                port:
                  number: 80
    - host: ssl.guestbook.rael.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: guestbook-np
                port:
                  number: 80
  tls:
    - hosts:
        - ssl.guestbook.rael.io
      secretName: ssl.guestbook.rael.io-cert
---
kind: Service
apiVersion: v1
metadata:
  name: guestbook-np
  labels:
    app: guestbook
spec:
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: guestbook
  type: NodePort
